fix(Layout): Fixes layout issue :grin:

--- a/src/assets/styles/sass/pages/_page.scss
+++ b/src/assets/styles/sass/pages/_page.scss
@@ -4,8 +4,7 @@
  * @author Daniel Furze
  */
 
- .page-content,
- .post {
+ .page-content {
   @extend %inner--small;
 }
 
